# ymux

./: .gitignore  Cargo.toml  README.ja.md  README.ko.md  README.md  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
.omc/: prd.json  project-memory.json
.omc/plans/: browser-engine-upgrade.md  open-questions.md
.omc/state/: agent-replay-0e9374a2-df23-4eeb-ad38-751bf9d8b24e.jsonl  agent-replay-1c046289-f35f-495a-9ca6-f40e9d7a6ac2.jsonl  agent-replay-31d51bc3-9c75-44f2-ba8d-c51aac6a41d4.jsonl  agent-replay-a527f5a6-46c6-45f3-a010-ab23132e9e11.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-05T12-15-43-640Z.json  checkpoint-2026-05-06T04-11-56-553Z.json  checkpoint-2026-05-06T05-44-07-754Z.json  checkpoint-2026-05-06T06-11-13-450Z.json  checkpoint-2026-05-06T11-52-31-121Z.json  checkpoint-2026-05-06T11-53-16-661Z.json  checkpoint-2026-05-06T11-55-30-345Z.json
.omc/state/sessions/0e9374a2-df23-4eeb-ad38-751bf9d8b24e/: hud-state.json  session-started.json
.omc/state/sessions/1c046289-f35f-495a-9ca6-f40e9d7a6ac2/: hud-state.json  session-started.json
.omc/state/sessions/31d51bc3-9c75-44f2-ba8d-c51aac6a41d4/: cancel-signal-state.json  hud-state.json  session-started.json
.omc/state/sessions/a527f5a6-46c6-45f3-a010-ab23132e9e11/: hud-state.json  session-started.json
.omc/state/sessions/ddb24e80-13ef-4380-ba25-7639e1155bef/: hud-state.json  session-started.json
crates/yipc/: Cargo.toml
crates/yipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/ytheme/: Cargo.toml
crates/ytheme/src/: lib.rs
docs/superpowers/plans/: 2026-05-08-ydir-open-in-ycode.md
scripts/: build-tools.mjs
src/: main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-children.json  default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: commands.rs  embedded_browser.rs  ipc_server.rs  lib.rs  main.rs  sysmonitor.rs  webview.rs
src-tauri/src/config/: model.rs  store.rs
src-tauri/src/pty/: manager.rs  mod.rs  osc7.rs  session.rs
src-tauri/src/shell/: detect.rs
src/browser/: BrowserPane.ts  EmbeddedBrowserPane.ts  NativeBrowserPane.ts  popupBlur.ts
src/help/: HelpOverlay.ts
src/hotkey/: HotKeyManager.ts
src/i18n/: i18n.ts
src/ipc/: bridge.ts
src/layout/: LayoutTree.ts  SplitContainer.ts
src/notes/: NotesOverlay.ts
src/palette/: CommandPalette.ts  commands.ts
src/settings/: SettingsOverlay.ts
src/terminal/: TerminalPane.ts  terminalThemes.ts
src/workspace/: WorkspaceBar.ts  WorkspaceManager.ts
tools/ycode/: Cargo.toml
tools/ycode/src/: app.rs  buffer.rs  highlight.rs  main.rs  markdown.rs  ui.rs
tools/ydir/: Cargo.toml
tools/ydir/src/: app.rs  main.rs  ui.rs
tools/ygit/: Cargo.toml
tools/ygit/src/: app.rs  graph.rs  main.rs  ui.rs
tools/ylauncher/: Cargo.toml
tools/ylauncher/src/: main.rs
tools/ymon/: Cargo.toml
tools/ymon/src/: app.rs  main.rs  ui.rs
