[package]
name = "ymux"
version = "0.5.0"
description = "A lightweight tmux-inspired terminal multiplexer for Windows"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ymux_lib"
path = "src/lib.rs"

[[bin]]
name = "ymux"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
sysinfo = "0.33"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri runtime is gated behind the `desktop` feature, which is on by default
# so that `pnpm tauri dev` / `pnpm tauri build` work out of the box on the
# Windows target machines this app is built for. Linux dev hosts that only
# want to run the cross-platform unit tests can opt out with
# `--no-default-features --lib --tests` to avoid pulling in the GTK/webkit2gtk
# system libraries the Tauri crate needs on Linux.
tauri = { version = "2", optional = true }

# Update checker: polls the GitHub releases API in a background thread. Kept
# behind the `desktop` feature because the cross-platform test suite doesn't
# need it, and rustls keeps the binary footprint minimal vs. openssl.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-build", "dep:reqwest"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
