[package]
name = "ycode"
version = "0.1.0"
edition = "2021"
description = "VS Code-style TUI code editor for the ymux ecosystem"

[[bin]]
name = "ycode"
path = "src/main.rs"

[dependencies]
ytheme = { path = "../../crates/ytheme" }
ratatui = "0.29"
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
