[package]
name = "ydir"
version = "0.1.0"
edition = "2021"
description = "mdir/Midnight Commander-style dual-pane file manager TUI"

[[bin]]
name = "ydir"
path = "src/main.rs"

[dependencies]
ytheme = { path = "../../crates/ytheme" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
