[package]
name = "ymon"
version = "0.1.0"
edition = "2021"
description = "htop/btop-style system monitor TUI for the ymux ecosystem"

[[bin]]
name = "ymon"
path = "src/main.rs"

[dependencies]
ytheme = { path = "../../crates/ytheme" }
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
anyhow = "1"
